- ForceInstances now limited to association with the controller node.
Version 1.5
 - Pull Request #743 - Updated Fibaro Devices from Navstev0 (Justin)
 - Pull Request #740 - Updated Fibaro FGMS-001 ID's from Technosf (Justin)
 - Pull Request #750 - Fix FreeBSD 10.1 and 10.2 Builds from stromnet (Justin)
 - Pull Request #751 - Fibaro FGD212 Australia Codes from daemondazz (Justin)
 - Pull Request #752 - Devolo Home Control Radiator Thermostat from blitzkneisser (Justin)
 - Pull Request #753 - Fix Aeotec Minimote Default Value from nayrnet (Justin)
 - Pull Request #737 - Add Enerwave ZW15S, ZW20R, ZW500D from chadparry (Justin)
 - Pull Request #759 - Qubino Supplied Config Files (Justin)
 - Add Vision ZF5201 Flood Sensor ID's from Emmanuel Pierre (Justin)
 - Issue #741 - Add new ID's for TZ68 Devices from philosifer (Justin)
 - Pull Request #761 - Add support for Fakro ARZ from pepeEL (Justin)
 - Pull Request #762 - Fix issues with Horstmann Thermostat from russdan (Justin)
 - Pull Request #764 - Add Dlink DCH-Z510 Siren from pepeEL (Justin)
 - Pull Request #766 - Add zwave.me ZME_05461 Dual load wall switch from koelie (Justin)
 - Pull Request #767 - Correct update param. from manual for Fibaro FGS221 from pepeEL (Justin)
 - Issue #757 - New ZMNHID1 config file stephaneguillard (Justin)
 - Issue #754 - New Philio PAN08-1 config file from pbda (Justin)
 - Pull Request #768 - Update Fibaro FGS222 from manual from pepeEL (Justin)
 - Pull Request #768 - Small correct Fibaro FGS221 from manual from pepeEL (Justin)
 - Pull Request #773 - Ecolink Door/Window Sensor from nayrnet (Justin)
 - Pull Request #780 - Add D-Link dch-z120 PIR/motion sensor from mattwire (Justin)
 - Pull Request #782 - If we recieve a UPDATE_STATE_NEW_ID_ASSIGNED and the Old and New NodeID's 
   are the same, don't reinitialize the Node from KillerCode (Justin)
 - Issue #774 - Improve support for Aeotec Double Smart switch from dnpwwo (Justin)