@@ -550,6 +550,13 @@ bool SwitchMultilevel::StartLevelChange
 	msg->Append( length );
 	msg->Append( GetCommandClassId() );
 	msg->Append( SwitchMultilevelCmd_StartLevelChange );
+	if (GetVersion() == 2) {
+		direction &= 0x60;
+	} else if (GetVersion() >= 3) {
+		/* we don't support secondary switch, so we mask that out as well */
+		direction &= 0xE0;
+	}
+
 	msg->Append( direction );
 	msg->Append( startLevel );
 
